correction ascenseur horizontal firefox : svg plus grande que visible

--- a/SASS/components/_button.scss
+++ b/SASS/components/_button.scss
@@ -38,14 +38,18 @@
         position: absolute;
         z-index:1;
         top:22%;
-        left:25%;            
+        left:25%;     
+        height: 24px;   
+        width: 24px;    
     }
     .full{
         display: block;       
         position: absolute;
         z-index:99;
         top:22%;
-        left:25%;            
+        left:25%;   
+        height: 24px;   
+        width: 24px;          
         transform: scale(0); 
         .main-stop {
             stop-color: $color-primary;
